feat: triangle demo linux

--- a/src/core/BUILD.bazel
+++ b/src/core/BUILD.bazel
@@ -149,6 +149,9 @@ cc_library(
     deps = [
         ":assert",
     ],
+    copts = select({
+        "@platforms//os:linux": ["-Wno-format-overflow"],
+    }),
     visibility = ["//visibility:public"],
 )
 
