--- a/scripts/python/BUILD.bazel
+++ b/scripts/python/BUILD.bazel
@@ -1,6 +1,14 @@
 load("@rules_python//python:py_binary.bzl", "py_binary")
 
 py_binary(
+    name = "generate_wayland_protocol",
+    srcs = [
+        "generate_wayland_protocol.py",
+    ],
+    visibility = ["//visibility:public"],
+)
+
+py_binary(
     name = "copy_files",
     srcs = [
         "copy_files.py",
