--- a/demos/ocean/BUILD.bazel
+++ b/demos/ocean/BUILD.bazel
@@ -27,8 +27,8 @@ glsl_shader(
 )
 
 glsl_shader(
-    name = "fft.comp.spv",
-    src = "fft.comp",
+    name = "ifft.comp.spv",
+    src = "ifft.comp",
     deps = [
         "//demos/common:glsl_bindless",
     ],
@@ -45,19 +45,6 @@ glsl_shader(
 glsl_shader(
     name = "copy.comp.spv",
     src = "copy.comp",
-    deps = [
-        "//demos/common:glsl_bindless",
-    ],
-)
-
-glsl_shader(
-    name = "screen_quad.vert.spv",
-    src = "screen_quad.vert",
-)
-
-glsl_shader(
-    name = "screen_quad.frag.spv",
-    src = "screen_quad.frag",
     deps = [
         "//demos/common:glsl_bindless",
     ],
@@ -91,13 +78,11 @@ cc_binary(
         "//demos/common:simple_camera_fps",
     ],
     data = [
-        ":screen_quad.vert.spv",
-        ":screen_quad.frag.spv",
         ":ocean.vert.spv",
         ":ocean.frag.spv",
         ":copy.comp.spv",
         ":transpose.comp.spv",
-        ":fft.comp.spv",
+        ":ifft.comp.spv",
         ":jonswap.comp.spv",
     ] + select({
         ":release_build": [
