update (ocean): moved skybox rendering in separate module

--- a/demos/ocean/BUILD.bazel
+++ b/demos/ocean/BUILD.bazel
@@ -89,10 +89,12 @@ cc_library(
     hdrs = [
         "quad_tree.h",
         "cascades.h",
+        "skybox_renderer.h",
     ],
     srcs = [
         "quad_tree.cpp",
         "cascades.cpp",
+        "skybox_renderer.cpp",
     ],
     deps = [
         "//src/rhi:context",
