fix: windows build

--- a/src/core/BUILD.bazel
+++ b/src/core/BUILD.bazel
@@ -151,6 +151,7 @@ cc_library(
     ],
     copts = select({
         "@platforms//os:linux": ["-Wno-format-overflow"],
+        "//conditions:default": [],
     }),
     visibility = ["//visibility:public"],
 )
