--- a/src/rhi/BUILD.bazel
+++ b/src/rhi/BUILD.bazel
@@ -13,6 +13,7 @@ cc_library(
         "texture.h",
         "vma.h",
         "shader_program.h",
+        "frame_graph.h",
     ],
     srcs = [
         "allocation_callbacks.cpp",
@@ -24,6 +25,7 @@ cc_library(
         "pipeline.cpp",
         "texture.cpp",
         "shader_program.cpp",
+        "frame_graph.cpp",
     ],
     includes = [".."],
     deps = [
