fix: hash trie typo

--- a/src/core/BUILD.bazel
+++ b/src/core/BUILD.bazel
@@ -181,6 +181,7 @@ cc_library(
         ":log",
         ":clock",
         ":thread_context",
+        ":hash_trie",
     ],
     visibility = ["//visibility:public"],
 )
