--- a/src/rhi/BUILD.bazel
+++ b/src/rhi/BUILD.bazel
@@ -18,6 +18,7 @@ cc_library(
     srcs = [
         "allocation_callbacks.cpp",
         "context.cpp",
+        "commands.cpp",
         "device.cpp",
         "surface.cpp",
         "buffer.cpp",
