--- a/demos/triangle/BUILD.bazel
+++ b/demos/triangle/BUILD.bazel
@@ -35,7 +35,7 @@ cc_binary(
     ],
     deps = [
         "//src/rhi:context",
-        "//demos/common:scene",
+        "//src/utils:utils",
     ],
     data = [
         ":triangle.frag.spv",
