update (frame_graph): dynamic size texture handling
- cubes demo rewritten with frame graph
- others demo broken for now

--- a/demos/cubes/BUILD.bazel
+++ b/demos/cubes/BUILD.bazel
@@ -50,7 +50,7 @@ cc_binary(
     deps = [
         "//src/rhi:context",
         "//src/assets:import_image",
-        "//demos/common:scene",
+        "//src/utils:utils",
         "//demos/common:simple_camera_fps",
     ],
     data = [
