update (gltf demo): gltf demo rewritten with frame graph

--- a/demos/common/BUILD.bazel
+++ b/demos/common/BUILD.bazel
@@ -38,6 +38,7 @@ cc_library(
         "//src/assets:import_image",
         "//src/assets:import_spv",
         "//src/rhi:context",
+        "//src/utils:utils",
     ],
     visibility = ["//visibility:public"],
 )
