update (radix_sort): demo rewritten with frame graph

--- a/demos/radix_sort/BUILD.bazel
+++ b/demos/radix_sort/BUILD.bazel
@@ -60,7 +60,7 @@ cc_binary(
     ],
     deps = [
         "//src/rhi:context",
-        "//demos/common:scene",
+        "//src/utils:utils",
     ],
     data = [
         ":radix_count_histogram.comp.spv",
