--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -7,6 +7,8 @@ bazel_dep(name = "rules_cc", version = "0.1.1")
 bazel_dep(name = "rules_python", version = "1.2.0")
 bazel_dep(name = "googletest", version = "1.16.0")
 
+include("//:assets.MODULE.bazel")
+
 python = use_extension(
     "@rules_python//python/extensions:python.bzl",
     "python",
@@ -27,7 +29,6 @@ pip.parse(
     requirements_lock = "//:requirements_lock.txt",
     requirements_windows = "//:requirements_windows.txt",
 )
-
 use_repo(pip, "pip")
 
 external_git_repository = use_extension(
@@ -182,26 +183,6 @@ external_git_repository.base(
     remote = "https://github.com/ocornut/imgui.git",
 )
 use_repo(external_git_repository, "imgui")
-
-################################################################
-# SCENES / DATA
-################################################################
-
-external_git_repository.base(
-    name = "gltf_sample_models",
-    build_file = "//scripts/bazel/target:BUILD.gltf_sample_models.bazel",
-    commit = "d7a3cc8e51d7c573771ae77a57f16b0662a905c6",
-    remote = "https://github.com/KhronosGroup/glTF-Sample-Models.git",
-)
-use_repo(external_git_repository, "gltf_sample_models")
-
-external_git_repository.base(
-    name = "splat_sample_scenes",
-    build_file = "//scripts/bazel/target:BUILD.splat_sample_scenes.bazel",
-    commit = "2c9796f59101d77d23f6eee53baa5018c9a6fcdc",
-    remote = "https://huggingface.co/cakewalk/splat-data.git",
-)
-use_repo(external_git_repository, "splat_sample_scenes")
 
 ################################################################
 # MISC
