feat (cooker): bc1, bc3, bc4, bc5 compression app

--- a/src/assets/BUILD.bazel
+++ b/src/assets/BUILD.bazel
@@ -87,7 +87,7 @@ cc_library(
         "..",
     ],
     deps = [
-        "//src/core:core",
+        ":import_image",
         "//src/math:math",
         "@stb//:stb_dxt",
     ],
